--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     label { display: block; margin: 1em 0 0.5em; }
     input, select { width: 100%; padding: 0.5em; font-size: 1em; }
     button { margin-top: 1em; padding: 0.7em; font-size: 1em; width: 100%; }
-    .result { margin-top: 1em; font-weight: bold; }
+    .result { margin-top: 1em; font-weight: bold; white-space: pre-wrap; }
   </style>
 </head>
 <body>
@@ -58,7 +58,7 @@
       taiwan: 0.32
     };
 
-    const carSpecificTariff = 0.25;
+    const autoTariff = 0.25; // Section 232 tariff for automobiles and auto parts
 
     function calculateTariff() {
       const good = document.getElementById('good').value;
@@ -70,13 +70,22 @@
         return;
       }
 
-      const countryTariff = countryTariffs[country] || 0;
-      const extraTariff = good === 'cars' ? carSpecificTariff : 0;
-      const totalTariffRate = baseTariff + countryTariff + extraTariff;
+      let totalTariffRate = 0;
+
+      if (good === 'cars') {
+        totalTariffRate = autoTariff;
+      } else {
+        const countryTariff = countryTariffs[country] || 0;
+        totalTariffRate = baseTariff + countryTariff;
+      }
+
       const tariffCost = price * totalTariffRate;
       const finalPrice = price + tariffCost;
 
-      document.getElementById('result').innerText = `Final Price: $${finalPrice.toFixed(2)} (Tariff added: $${tariffCost.toFixed(2)} | Total Tariff Rate: ${(totalTariffRate * 100).toFixed(1)}%)`;
+      document.getElementById('result').innerText = 
+        `Final Price to Consumer: $${finalPrice.toFixed(2)}\n` +
+        `(Base Price: $${price.toFixed(2)} + Tariff: $${tariffCost.toFixed(2)})\n` +
+        `Total Tariff Rate: ${(totalTariffRate * 100).toFixed(1)}%`;
     }
   </script>
 </body>
