--- a/index.html
+++ b/index.html
@@ -1,91 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Tariff Cost Calculator</title>
+  <meta charset="UTF-8" />
+  <title>Hollar Dollar</title>
   <style>
-    body { font-family: Arial, sans-serif; padding: 2em; background: #f9f9f9; }
-    h1 { text-align: center; }
-    .calculator { max-width: 500px; margin: auto; background: white; padding: 2em; border-radius: 10px; box-shadow: 0 0 10px rgba(0,0,0,0.1); }
-    label { display: block; margin: 1em 0 0.5em; }
-    input, select { width: 100%; padding: 0.5em; font-size: 1em; }
-    button { margin-top: 1em; padding: 0.7em; font-size: 1em; width: 100%; }
-    .result { margin-top: 1em; font-weight: bold; white-space: pre-wrap; }
+    body { font-family: sans-serif; padding: 20px; background: #f0f0f0; }
+    h1 { color: #333; }
+    .kid-card {
+      border: 1px solid #ccc;
+      padding: 10px;
+      margin-top: 10px;
+      background: white;
+    }
+    button { margin: 5px; }
   </style>
 </head>
 <body>
-  <h1>Tariff Cost Calculator</h1>
-  <div class="calculator">
-    <label for="good">Select Good:</label>
-    <select id="good">
-      <option value="clothes">Clothes</option>
-      <option value="electronics">Electronics</option>
-      <option value="cars">Cars</option>
-    </select>
+  <h1>📢 Hollar Dollar</h1>
 
-    <label for="country">Country of Origin:</label>
-    <select id="country">
-      <option value="china">China</option>
-      <option value="mexico">Mexico</option>
-      <option value="germany">Germany</option>
-      <option value="japan">Japan</option>
-      <option value="vietnam">Vietnam</option>
-      <option value="bangladesh">Bangladesh</option>
-      <option value="india">India</option>
-      <option value="south_korea">South Korea</option>
-      <option value="taiwan">Taiwan</option>
-    </select>
+  <h3>Add a Kid</h3>
+  <input type="text" id="kidName" placeholder="Enter kid's name" />
+  <button onclick="addKid()">Add Kid</button>
 
-    <label for="price">Base Price (USD):</label>
-    <input type="number" id="price" placeholder="Enter price" />
-
-    <button onclick="calculateTariff()">Calculate Final Price</button>
-    <div class="result" id="result"></div>
-  </div>
+  <div id="kidsContainer"></div>
 
   <script>
-    const baseTariff = 0.10; // Universal baseline tariff
+    const kids = {};
 
-    const countryTariffs = {
-      china: 0.34,
-      mexico: 0.00,
-      germany: 0.20,
-      japan: 0.24,
-      vietnam: 0.46,
-      bangladesh: 0.37,
-      india: 0.26,
-      south_korea: 0.25,
-      taiwan: 0.32
-    };
+    function addKid() {
+      const name = document.getElementById("kidName").value.trim();
+      if (!name || kids[name]) return;
+      kids[name] = { balance: 0 };
+      updateUI();
+      document.getElementById("kidName").value = "";
+    }
 
-    const autoTariff = 0.25; // Section 232 tariff for automobiles and auto parts
+    function logDollar(name) {
+      kids[name].balance += 1;
+      updateUI();
+    }
 
-    function calculateTariff() {
-      const good = document.getElementById('good').value;
-      const country = document.getElementById('country').value;
-      const price = parseFloat(document.getElementById('price').value);
-
-      if (isNaN(price) || price <= 0) {
-        document.getElementById('result').innerText = "Please enter a valid base price.";
-        return;
+    function payDollar(name) {
+      if (kids[name].balance > 0) {
+        kids[name].balance -= 1;
+        updateUI();
       }
+    }
 
-      let totalTariffRate = 0;
-
-      if (good === 'cars') {
-        totalTariffRate = autoTariff;
-      } else {
-        const countryTariff = countryTariffs[country] || 0;
-        totalTariffRate = baseTariff + countryTariff;
-      }
-
-      const tariffCost = price * totalTariffRate;
-      const finalPrice = price + tariffCost;
-
-      document.getElementById('result').innerText = 
-        `Final Price to Consumer: $${finalPrice.toFixed(2)}\n` +
-        `(Base Price: $${price.toFixed(2)} + Tariff: $${tariffCost.toFixed(2)})\n` +
-        `Total Tariff Rate: ${(totalTariffRate * 100).toFixed(1)}%`;
+    function updateUI() {
+      const container = document.getElementById("kidsContainer");
+      container.innerHTML = "";
+      Object.keys(kids).forEach(name => {
+        const card = document.createElement("div");
+        card.className = "kid-card";
+        card.innerHTML = `
+          <strong>${name}</strong><br>
+          Owes: $${kids[name].balance}<br>
+          <button onclick="logDollar('${name}')">Hollar Dollar</button>
+          <button onclick="payDollar('${name}')">Pay $1 / Do Chore</button>
+        `;
+        container.appendChild(card);
+      });
     }
   </script>
 </body>
