--- a/index.html
+++ b/index.html
@@ -11,25 +11,21 @@
       margin: 0;
       padding: 0;
     }
-
     .container {
       max-width: 100%;
       padding: 20px;
       box-sizing: border-box;
     }
-
     h1, h3 {
       text-align: center;
       color: #333;
     }
-
     .input-group {
       display: flex;
       flex-direction: column;
       align-items: center;
       margin-bottom: 20px;
     }
-
     input[type="text"],
     input[type="datetime-local"],
     textarea {
@@ -42,7 +38,6 @@
       border: 1px solid #ccc;
       box-sizing: border-box;
     }
-
     button {
       padding: 12px 18px;
       font-size: 16px;
@@ -55,11 +50,9 @@
       max-width: 300px;
       cursor: pointer;
     }
-
     .reset-btn {
       background-color: #dc3545;
     }
-
     .kid-card {
       background: white;
       padding: 20px;
@@ -70,7 +63,6 @@
       box-shadow: 0 2px 5px rgba(0,0,0,0.1);
       text-align: center;
     }
-
     .log-entry {
       background: #eee;
       border-radius: 5px;
@@ -79,16 +71,13 @@
       text-align: left;
       font-size: 14px;
     }
-
     .log-container {
       margin-top: 15px;
       text-align: left;
     }
-
     .hidden {
       display: none;
     }
-
     .heatmap-wrapper {
       margin: 30px auto;
       max-width: 500px;
@@ -97,14 +86,12 @@
       border-radius: 10px;
       box-shadow: 0 2px 5px rgba(0,0,0,0.1);
     }
-
     .heatmap {
       display: grid;
       grid-template-columns: repeat(4, 1fr);
       gap: 6px;
       margin-top: 10px;
     }
-
     .heat-block {
       padding: 8px;
       text-align: center;
@@ -113,7 +100,6 @@
       color: white;
       cursor: pointer;
     }
-
     .modal {
       position: fixed;
       top: 0;
@@ -126,7 +112,6 @@
       justify-content: center;
       z-index: 999;
     }
-
     .modal-content {
       background: white;
       padding: 20px;
@@ -136,12 +121,10 @@
       max-height: 80vh;
       overflow-y: auto;
     }
-
     .modal-content h4 {
       margin-top: 0;
       text-align: center;
     }
-
     .modal-content button {
       background: #dc3545;
       margin-top: 10px;
@@ -151,16 +134,13 @@
 <body>
   <div class="container">
     <h1>📢 Hollar Dollar</h1>
-
     <h3>Add a Kid</h3>
     <div class="input-group">
       <input type="text" id="kidName" placeholder="Enter kid's name" />
       <button onclick="addKid()">Add Kid</button>
       <button class="reset-btn" onclick="resetAll()">Reset All</button>
     </div>
-
     <div id="kidsContainer"></div>
-
     <div class="heatmap-wrapper">
       <h3 style="text-align:center;">🕒 Hollar Dollar Heatmap (6AM – 10PM)</h3>
       <div class="heatmap" id="heatmap"></div>
@@ -168,7 +148,7 @@
   </div>
 
   <!-- Modal -->
-  <div id="hourModal" class="modal hidden">
+  <div id="hourModal" class="modal hidden" style="display: none;">
     <div class="modal-content" id="modalContent">
       <h4>Hour Log</h4>
       <div id="modalEntries"></div>
@@ -180,11 +160,11 @@
     let kids = {};
 
     window.onload = function () {
-      document.getElementById("hourModal").classList.add("hidden");
+      const modal = document.getElementById("hourModal");
+      modal.classList.add("hidden");
+      modal.style.display = "none";
       const saved = localStorage.getItem("hollarDollarData");
-      if (saved) {
-        kids = JSON.parse(saved);
-      }
+      if (saved) kids = JSON.parse(saved);
       updateUI();
     };
 
@@ -279,7 +259,6 @@
         `;
         container.appendChild(card);
       });
-
       updateHeatmap();
     }
 
@@ -340,10 +319,13 @@
 
       document.querySelector("#modalContent h4").innerText = `Hollar Dollar Log – ${formatAMPM(hour)}`;
       modal.classList.remove("hidden");
+      modal.style.display = "flex";
     }
 
     function closeModal() {
-      document.getElementById("hourModal").classList.add("hidden");
+      const modal = document.getElementById("hourModal");
+      modal.classList.add("hidden");
+      modal.style.display = "none";
     }
   </script>
 </body>
