--- a/index.html
+++ b/index.html
@@ -112,22 +112,37 @@
       justify-content: center;
       z-index: 999;
     }
-    .modal-content {
-      background: white;
-      padding: 20px;
-      width: 90%;
-      max-width: 400px;
-      border-radius: 10px;
-      max-height: 80vh;
-      overflow-y: auto;
-    }
-    .modal-content h4 {
-      margin-top: 0;
-      text-align: center;
-    }
-    .modal-content button {
-      background: #dc3545;
-      margin-top: 10px;
+.modal-content {
+  background: white;
+  padding: 20px;
+  width: 90%;
+  max-width: 400px;
+  border-radius: 10px;
+  max-height: 80vh;
+  overflow-y: auto;
+  text-align: center; /* Center modal content */
+}
+
+.modal-content button {
+  background: #dc3545;
+  margin-top: 15px;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  width: 80%;
+  max-width: 200px;
+}
+
+.log-entry {
+  background: #f8f9fa;
+  margin: 10px auto;
+  padding: 10px;
+  border-radius: 8px;
+  font-size: 14px;
+  text-align: center; /* Center log entry text */
+  width: 90%;
+  max-width: 300px;
+}
     }
   </style>
 </head>
